# terraform-gcp-gke

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  .tflint.hcl  README.md  dns.tf  gcr-credential-refresher.tf  gcr.tf  gke.tf  kms.tf  kubeconfig.tf  main.tf  network.tf  nfs-instance.tf  node_pools.tf  output.tf  outputs.tf  pyproject.toml  service-accounts.tf  storage.tf  terraform.tf  variables.tf  versions.tf
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: terraform-checks.yml
ddlcloud_generator_gke/: __init__.py  util.py  v1_0.py
generator/: v1_0.py
pytests/: Makefile  Pipfile  generate.py  test_generator.py
pytests/fixtures/: defaults.yaml
templates/: kubeconfig.tpl  nfs-install.sh  terraform.tf.tpl
tests/: .terraform.lock.hcl  Pipfile  README.md  generate.py  main.tf  modules.tf.json  modules.tf.previous.json  test.tf  variables.tf
